# llm-chatbot-python

./: README.adoc  README.md  agent.py  agent_prompt.txt  llm.py  pyproject.toml  watsonx.ipynb
